--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Vaultkit App</title>
     <meta
       name="description"
-      content="The starting point for your next project with Vaultkit App"
+      content="Vault for personal data"
     />
     <meta name="keywords" content="vault kit, store data" />
     <meta name="author" content="Vaultkit App" />
